# extism-cpp-demo

./: .gitmodules  ExtismCppDemo.sln  README.md
Dependencies/extism-github/lib/: extism.lib
Dependencies/extism/lib/: extism.dll.lib  extism.lib
DynamicLinkingApp/: DynamicLinkingApp.vcxproj
DynamicLinkingAppGitHub/: DynamicLinkingAppGitHub.vcxproj
StaticLinkingApp/: StaticLinkingApp.vcxproj
StaticLinkingAppGitHub/: StaticLinkingAppGitHub.vcxproj  main.cpp
cmake/: CMakeLists.txt  cmake.sln  main.cpp
sln/: ExtismCppDemo.sln
sln/Dependencies/extism/lib/: extism.dll.lib  extism.lib
sln/DynamicLinkingApp/: DynamicLinkingApp.vcxproj  main.cpp
sln/StaticLinkingApp/: StaticLinkingApp.vcxproj
